overflow resolved

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -28,6 +28,9 @@
 body {
   overflow-x: hidden;
 }
+body > * {
+  overflow-x: hidden;
+}
 
 .footer-dark .item.social > a:hover {
   color: #3466ac;
